[build-system]
requires = ["setuptools>61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardio"
version = "2023.1.2"
authors = [
    {name = "Davis Marc Vigneault", email = "davis.vigneault@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "trame-vuetify>=3.0.2",
    "trame-vtk>=2.9.1",
    "trame>=3.11.0",
    "itk>=5.4.4.post1",
    "vtk>=9.5.0",
    "tomlkit>=0.13.3",
    "numpy>=2.2.6",
]
description = "A simple web-based viewer for 4D ('cine') medical imaging data."
keywords = ["Medical", "Imaging", "4D", "Visualization"]
license = {file = "LICENSE"}
maintainers = [
    {name = "Davis Marc Vigneault", email = "davis.vigneault@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "pytest", "bumpver", "build", "twine"]

[project.gui-scripts]
cardio = "cardio.app:main"

[project.urls]
repository = "https://github.com/dvigneault/cardio"

[tool.isort]
profile = "black"

[tool.bumpver]
current_version = "2023.1.2"
version_pattern = "YYYY.MM.INC0"
commit_message = "ENH: Bump version from {old_version} => {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/cardio/__init__.py" = [
    '__version__ = "{version}"',
]
