[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project]
name = "cardio"
version = "2025.12.0"
authors = [
    {name = "Davis Marc Vigneault", email = "davis.vigneault@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "trame-vuetify>=3.0.2",
    "trame-vtk>=2.9.1",
    "itk>=5.4.4.post1",
    "vtk>=9.5.0",
    "tomlkit>=0.13.3",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "trame>=3.12.0",
    "trame-client>=3.10.1",
]
description = "A simple web-based viewer for 3D and 4D ('cine') medical imaging data."
keywords = ["Medical", "Imaging", "3D", "4D", "Visualization"]
license = {file = "LICENSE"}
maintainers = [
    {name = "Davis Marc Vigneault", email = "davis.vigneault@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
 "ruff>=0.12.10",
 "isort>=6.0.1",
 "bumpver>=2025.1131",
 "pytest>=8.4.1",
 "coverage>=7.10.4",
]

[project.gui-scripts]
cardio = "cardio.app:main"

[project.urls]
repository = "https://github.com/sudomakeinstall/cardio"

[tool.isort]
profile = "black"

[tool.bumpver]
current_version = "2025.12.0"
version_pattern = "YYYY.MM.INC0"
commit_message = "ENH: Bump version from {old_version} => {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/cardio/__init__.py" = [
    '__version__ = "{version}"',
]
"README.md" = [
    'cardio {version}',
]
