[metadata]
name = cardio
version = 0.1.0
description = A simple viewer for 4D ("cine") medical imaging data.
long_description = file: README.md
long_description_content_type = text/x-rst
author = Davis Marc Vigneault
license = Apache Software License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Medical
    Imaging
    Timeseries
    Visualization

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    trame>=2.0.0rc2
    vtk
    itk
    tomlkit
    numpy

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cardio = cardio.app:main

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
